trunk/Archive2/da/b856dca7670f19/output
main.cpp: In instantiation of 'auto apply(FunctionT&&, ArgTuple&&) [with ArgTuple = std::tuple<std::unique_ptr<int, std::default_delete<int> >&&>; FunctionT = void (&)(std::unique_ptr<int>&&)]':
main.cpp:26:5:   required from here
main.cpp:14:105: error: no matching function for call to 'forward(std::tuple<std::unique_ptr<int, std::default_delete<int> >&&>&)'
     return apply_impl(std::make_index_sequence<std::tuple_size<ArgTuple>::value>(), f, std::forward(args));
                                                                                                         ^
main.cpp:14:105: note: candidates are:
In file included from /usr/local/include/c++/4.9.0/bits/stl_pair.h:59:0,
                 from /usr/local/include/c++/4.9.0/bits/stl_algobase.h:64,
                 from /usr/local/include/c++/4.9.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/move.h:76:5: note: template<class _Tp> constexpr _Tp&& std::forward(typename std::remove_reference<_From>::type&)
     forward(typename std::remove_reference<_Tp>::type& __t) noexcept
     ^
/usr/local/include/c++/4.9.0/bits/move.h:76:5: note:   template argument deduction/substitution failed:
main.cpp:14:105: note:   couldn't deduce template parameter '_Tp'
     return apply_impl(std::make_index_sequence<std::tuple_size<ArgTuple>::value>(), f, std::forward(args));
                                                                                                         ^
In file included from /usr/local/include/c++/4.9.0/bits/stl_pair.h:59:0,
                 from /usr/local/include/c++/4.9.0/bits/stl_algobase.h:64,
                 from /usr/local/include/c++/4.9.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/move.h:87:5: note: template<class _Tp> constexpr _Tp&& std::forward(typename std::remove_reference<_From>::type&&)
     forward(typename std::remove_reference<_Tp>::type&& __t) noexcept
     ^
/usr/local/include/c++/4.9.0/bits/move.h:87:5: note:   template argument deduction/substitution failed:
main.cpp:14:105: note:   couldn't deduce template parameter '_Tp'
     return apply_impl(std::make_index_sequence<std::tuple_size<ArgTuple>::value>(), f, std::forward(args));
                                                                                                         ^
